# codegen

./: .gitignore  README.md  pyproject.toml
angular_template_cli/create_project/: create_angular_template.py  create_modules.py
angular_template_cli/custom_widgets/: create_custom_widget.py
angular_template_cli/src/: app.py
angular_template_cli/src/create_project/: create_angular_template.py
codegen/: __main__.py
codegen/angular_template_cli/: init_angular.py
codegen/angular_template_cli/create_project/: create_angular_template.py
codegen/angular_template_cli/custom_widgets/: create_custom_widget.py  generate_table.py
codegen/flutter_template_cli/: init_flutter.py
codegen/flutter_template_cli/create_project/: create_flutter_template.py  http_interceptor.py  l10n.py  login.py  pubspec.py  redux.py  setup_main.py  sqlflite.py
codegen/flutter_template_cli/custom_widgets/: create_custom_widget.py
codegen/src/: __main__.py
codegen/src/angular_template_cli/: init_angular.py
codegen/src/flutter_template_cli/: init_flutter.py
codegen/src/utils/: prompter.py  utils.py
codegen/utils/: config.py  prompter.py  utils.py
data/angular/create/: app.config.ts
flutter_template_cli/create_project/: create_flutter_template.py  http_interceptor.py  l10n.py  redux.py  sqlflite.py
flutter_template_cli/src/: app.py
flutter_template_cli/src/create_project/: create_flutter_template.py  l10n.py  login.py  redux.py  setup_main.py  sqlflite.py
flutter_template_cli/src/custom_widgets/: generate_custom_widget.py
src/: __main__.py
utils/: utils.py
(+90 files in other folders)
