[project]
name = "codegen"
version = "0.1.0"
description = ""
authors = [
    {name = "Matteo Barone",email = "matteo.barone1199@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "inquirerpy (>=0.3.4,<0.4.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
codegen = "codegen.__main__:init_program"

[tool.poetry]
packages = [
    {include = "codegen"}
]